--- a/components/home/Hero.module.css
+++ b/components/home/Hero.module.css
@@ -3,7 +3,7 @@
     min-height: calc(100vh - 80px);
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     background-image: url('/hero.jpg');
     background-size: cover;
     background-position: center;
@@ -23,31 +23,36 @@
     padding: 0 64px;
     position: relative;
     z-index: 1;
+    width: 100%;
 }
 
 .content {
     max-width: 600px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0;
+    padding: 0;
 }
 
 .title {
     font-size: 48px;
-    font-weight: 700;
-    line-height: 1.2;
-    color: #fff;
+    font-weight: 600;
+    line-height: 0.67;
+    color: #f7f7f7;
     margin-bottom: 16px;
 }
 
 .subtitle {
     font-size: 24px;
-    font-weight: 400;
-    line-height: 1.5;
+    font-weight: 600;
+    line-height: 1.33;
     color: #f7f7f7;
     margin-bottom: 40px;
 }
 
-.description {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #f7f7f7;
-    margin-bottom: 40px;
-    max-width: 500px; }
+.buttonWrapper {
+    display: flex;
+    justify-content: center;
+}
