--- a/components/catalog/Filters.module.css
+++ b/components/catalog/Filters.module.css
@@ -168,4 +168,8 @@
 }
 
 .searchButton {
-    width: 100%; }
+    border-radius: 200px;
+    padding: 16px 60px;
+    width: 166px;
+    height: 56px; 
+    }
