--- a/components/details/BookingForm.module.css
+++ b/components/details/BookingForm.module.css
@@ -63,6 +63,15 @@
     margin-top: 4px;
 }
 
+.submitButtonWrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
+}
+
 .submitButton {
-    width: 100%;
-    margin-top: 8px; }
+    border-radius: 200px;
+    padding: 16px 60px;
+    width: 166px;
+    height: 56px;
+}
