fixing color favorite heart, background-color features

--- a/app/catalog/[id]/page.module.css
+++ b/app/catalog/[id]/page.module.css
@@ -93,8 +93,8 @@
 
 .tabContent {
     flex: 1;
-    border: 1px solid #dadde1;
     border-radius: 10px;
+    background-color: #f7f7f7;
 }
 
 .bookingWrapper {
